avoid horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ strong{
   margin-top: 4px;
 }
 .container {
-  max-width: 600px;
+  max-width: 560px;
   width: 100%;
   position: absolute;
   height: 100%;
